modal no longer shifts page on open/close

--- a/css/index.css
+++ b/css/index.css
@@ -328,6 +328,14 @@ figure:hover img {
     background-color: #fff7e0;
 }
 
+.modal {
+    overflow-y: auto;
+}
+
+.modal-open {
+    overflow: auto;
+}
+
 @-webkit-keyframes fadeInUpBig {
     0% {
         opacity: 0;
